force-app/main/default/objects/Owner__c/Owner__c.object-meta.xml
<CustomObject>
    <label>Owner</label>
    <nameField>
        <displayFormat>OWN-{000000}</displayFormat>
        <label>Owner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>