force-app/main/default/objects/Owner__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Owner&apos;s Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ownerships</relationshipLabel>
    <relationshipName>Owners</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>