force-app/main/default/objects/Owner__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <label>Share</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>