force-app/main/default/objects/Owner__c/validationRules/Share_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Share_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Share__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Share__c</errorDisplayField>
    <errorMessage>Share percentage must be positive</errorMessage>
</ValidationRule>